modules/ca/src/client/cadef.h


typedef struct oldChannelNotify *chid;
typedef chid                    chanId; 
typedef long                    chtype;
typedef struct oldSubscription  *evid;
typedef double                  ca_real;
struct  connection_handler_args {
    chanId  chid;  
    long    op;    
};
typedef void caCh (struct connection_handler_args args);
typedef struct ca_access_rights {
    unsigned    read_access:1; 
    unsigned    write_access:1; 
} caar;
struct  access_rights_handler_args {
    chanId  chid;   
    caar    ar;     
};
typedef void caArh (struct access_rights_handler_args args);
typedef struct event_handler_args {
    void            *usr;   
    chanId          chid;   
    long            type;   
    long            count;  
    const void      *dbr;   
    int             status; 
} evargs;
typedef void caEventCallBackFunc (struct event_handler_args);
struct exception_handler_args {
    void            *usr;   
    chanId          chid;   
    long            type;   
    long            count;  
    void            *addr;  
    long            stat;   
    long            op;     
    const char      *ctx;   
    const char      *pFile; 
    unsigned        lineNo; 
};
LIBCA_API short epicsStdCall ca_field_type (chid chan);
LIBCA_API unsigned long epicsStdCall ca_element_count (chid chan);
LIBCA_API const char * epicsStdCall ca_name (chid chan);
LIBCA_API void epicsStdCall ca_set_puser (chid chan, void *puser);
LIBCA_API void * epicsStdCall ca_puser (chid chan);
LIBCA_API unsigned epicsStdCall ca_read_access (chid chan);
LIBCA_API unsigned epicsStdCall ca_write_access (chid chan);
enum channel_state {
	cs_never_conn,
	cs_prev_conn,
	cs_conn,
	cs_closed
};
LIBCA_API enum channel_state epicsStdCall ca_state (chid chan);
LIBCA_API int epicsStdCall ca_task_initialize (void);
enum ca_preemptive_callback_select
{ ca_disable_preemptive_callback, ca_enable_preemptive_callback };
LIBCA_API int epicsStdCall 
        ca_context_create (enum ca_preemptive_callback_select select);
LIBCA_API void epicsStdCall ca_detach_context ();
LIBCA_API int epicsStdCall ca_task_exit (void);
LIBCA_API void epicsStdCall ca_context_destroy (void);
typedef unsigned capri;
LIBCA_API int epicsStdCall ca_create_channel
(
     const char     *pChanName,
     caCh           *pConnStateCallback,
     void           *pUserPrivate,
     capri          priority,
     chid           *pChanID
);
LIBCA_API int epicsStdCall ca_change_connection_event
(
     chid       chan,
     caCh *     pfunc
);
LIBCA_API int epicsStdCall ca_replace_access_rights_event (
     chid   chan,
     caArh  *pfunc
);
typedef void caExceptionHandler (struct exception_handler_args);
LIBCA_API int epicsStdCall ca_add_exception_event
(
     caExceptionHandler *pfunc,
     void               *pArg
);
LIBCA_API int epicsStdCall ca_clear_channel
(
     chid   chanId
);
LIBCA_API int epicsStdCall ca_array_put
(
     chtype         type,
     unsigned long  count,
     chid           chanId,
     const void *   pValue
);
LIBCA_API int epicsStdCall ca_array_put_callback
(
     chtype                 type,
     unsigned long          count,
     chid                   chanId,
     const void *           pValue,
     caEventCallBackFunc *  pFunc,
     void *                 pArg
);
LIBCA_API int epicsStdCall ca_array_get
(
     chtype         type,
     unsigned long  count,
     chid           chanId,
     void *         pValue
);
LIBCA_API int epicsStdCall ca_array_get_callback
(
     chtype                 type,
     unsigned long          count,
     chid                   chanId,
     caEventCallBackFunc *  pFunc,
     void *                 pArg
);
LIBCA_API int epicsStdCall ca_create_subscription
(
     chtype                 type,
     unsigned long          count,
     chid                   chanId,
     long                   mask,
     caEventCallBackFunc *  pFunc,
     void *                 pArg,
     evid *                 pEventID
);
LIBCA_API int epicsStdCall ca_clear_subscription
(
     evid eventID
);
LIBCA_API chid epicsStdCall ca_evid_to_chid ( evid id );
LIBCA_API int epicsStdCall ca_pend_event (ca_real timeout);
#define ca_poll() ca_pend_event(1e-12)
LIBCA_API int epicsStdCall ca_pend_io (ca_real timeout);
LIBCA_API int epicsStdCall ca_pend (ca_real timeout, int early);
LIBCA_API int epicsStdCall ca_test_io (void);
LIBCA_API int epicsStdCall ca_flush_io (void);
LIBCA_API const char * epicsStdCall ca_host_name (chid channel);
LIBCA_API unsigned epicsStdCall ca_get_host_name ( chid pChan, 
    char *pBuf, unsigned bufLength );
LIBCA_API int epicsStdCall ca_v42_ok (chid chan);
LIBCA_API const char * epicsStdCall ca_version (void);
LIBCA_API struct ca_client_context * epicsStdCall ca_current_context ();
LIBCA_API int epicsStdCall ca_attach_context ( struct ca_client_context * context );
LIBCA_API int epicsStdCall ca_client_status ( unsigned level );
LIBCA_API int epicsStdCall ca_context_status ( struct ca_client_context *context, unsigned level );
LIBCA_API int epicsStdCall ca_modify_user_name ( const char *pUserName );
LIBCA_API int epicsStdCall ca_modify_host_name ( const char *pHostName );