build/lib.macosx-11.0-arm64-cpython-314/epicscorelibs/ca.pxd


    cdef struct ca_access_rights:
        unsigned read_access
        unsigned write_access
    ctypedef access_rights_handler_args caar

    cdef struct access_rights_handler_args:
        chanId chid
        caar ar
    ctypedef void caArh (access_rights_handler_args args)

    cdef struct event_handler_args:
        void            *usr
        chanId          chid
        long            type
        long            count
        const void      *dbr
        int             status
    ctypedef void caEventCallBackFunc (event_handler_args)

    cdef struct exception_handler_args:
        void            *usr
        chanId          chid
        long            type
        long            count
        void            *addr
        long            stat
        long            op
        const char      *ctx
        const char      *pFile
        unsigned        lineNo
    ctypedef void caExceptionHandler (exception_handler_args)

    cdef struct ca_client_context:
        pass # opaque

    short ca_field_type (chid chan)
    unsigned long ca_element_count (chid chan)
    const char * ca_name (chid chan)
    void ca_set_puser (chid chan, void *puser)
    void * ca_puser (chid chan)
    unsigned ca_read_access (chid chan)
    unsigned ca_write_access (chid chan)

    cdef enum channel_state:
        cs_never_conn
        cs_prev_conn
        cs_conn
        cs_closed

    channel_state ca_state (chid chan)

    int ca_task_initialize ()

    cdef enum ca_preemptive_callback_select:
        ca_disable_preemptive_callback
        ca_enable_preemptive_callback

    int ca_context_create (ca_preemptive_callback_select select)
    void ca_detach_context () 

    int ca_task_exit ()
    void ca_context_destroy ()

    int ca_create_channel(const char *pChanName, caCh *pConnStateCallback, void *pUserPrivate, capri priority, chid *pChanID)

    int ca_change_connection_event(chid chan, caCh * pfunc)

    int ca_replace_access_rights_event (chid chan, caArh *pfunc)

    int ca_add_exception_event(caExceptionHandler *pfunc, void *pArg)

    int ca_clear_channel(chid chanId)

    int ca_array_put(chtype type, unsigned long count, chid chanId, const void * pValue)

    int ca_array_put_callback(chtype type, unsigned long count, chid chanId, const void * pValue, caEventCallBackFunc * pFunc, void * pArg)

    int ca_array_get( chtype type, unsigned long count, chid chanId, void * pValue)

    int ca_array_get_callback( chtype type, unsigned long count, chid chanId, caEventCallBackFunc * pFunc, void * pArg)

    int ca_create_subscription( chtype type, unsigned long count, chid chanId, long mask, caEventCallBackFunc * pFunc, void * pArg, evid * pEventID)

    int ca_clear_subscription( evid eventID)

    chid ca_evid_to_chid ( evid id )

    int ca_pend_event (ca_real timeOut)
    int ca_poll()

    int ca_pend_io (ca_real timeOut)

    int ca_pend (ca_real timeout, int early)

    int ca_test_io ()

    int ca_flush_io ()

    const char * ca_host_name (chid channel)
    # thread safe version
    unsigned ca_get_host_name ( chid pChan, char *pBuf, unsigned bufLength )

    int ca_v42_ok (chid chan)

    const char* ca_version ()

    ca_client_context* ca_current_context ()
    int ca_attach_context ( ca_client_context * context )

    int ca_client_status ( unsigned level )
    int ca_context_status ( ca_client_context *, unsigned level )


    int ca_modify_user_name ( const char *pUserName )
    int ca_modify_host_name ( const char *pHostName )
